# connectome-snns

./: .gitignore  .pre-commit-config.yaml  README.md  experiment.toml  main.py  pyproject.toml  run  run_experiment.py  run_grid_search.py
.claude/: .nfs599acaf7db48851300000004  .nfs84c856b1719f187e00002556
.github/: copilot-instructions.md
notebooks/: Dp-simulation.html  Dp-simulation.ipynb  _quarto.yml  analyse_em_hidden_units.ipynb  analyse_noisy_student_teacher.ipynb  computational_graph.ipynb  conductance_based_fitting ten_neurons.ipynb  conductance_based_fitting.ipynb  conductance_based_fitting_two_neurons.ipynb  explore_noise_rescaling.ipynb  fit_single_neuron.ipynb  fit_single_neuron_current_based.ipynb  fit_single_neuron_detached.ipynb  fit_two_input_neurons_current_based.ipynb  generating-spiketrains-example.ipynb  generating-spiketrains.ipynb  surrgrad_scales.ipynb  test_current_based_model.ipynb  van_rossum_vis.ipynb
parameters/: Dp-default.csv  Dp_default.csv  Dp_default.toml  conductance-based-Dp.toml  experiment.toml  generate-teacher-activity.toml  homeostatic-plasticity.toml  train-student.toml  zebrafish-dp-default.csv
parameters/conductance_based/: experiment-feedforward-noisy.toml  train-feedforward-noisy.toml  train-hidden-units-em.toml  train-student-hidden.toml  train-student.toml
parameters/current_based/: current-based-Dp.toml
scripts/: conductance_based_Dp.py  conductance_based_Dp_plots.py  current_based_Dp.py  homeostatic_plasticity.py  run_experiment.py  run_grid_search.py  simulate_Dp.py  simulate_Dp_plots.py
scripts/conductance_based_Dp/: conductance_based_Dp.py  conductance_based_Dp_plots.py
scripts/current_based_Dp/: current_based_Dp.py  current_based_Dp_plots.py  current_based_Dp_readme.md
scripts/fitting_activity/: debug.py  fitting_activity.py  fitting_activity_readme.md  generate_teacher_activity.py  generate_teacher_activity_control.py  odour_plots.py  plot_odourant_vs_noise.py  plot_odourants.py  plot_trained_network_vs_target.py  resume_training.py  train_single_neuron.py  train_student.py
scripts/homeostatic_plasticity/: backprop_hp.py  feedback_hp.py  homeostatic_plasticity.py  homeostatic_plasticity_debug.py  homeostatic_plasticity_readme.md  homeostatic_plots.py  resume_backprop_hp.py  resume_training.py
scripts/network_inference/: generate_connectome.py  load_connectome.py  network_inference.py  (+1 more)
workspace/: run_grid_search.py
(+115 files in other folders)
